unpackaged/config/qa/objects/___NAMESPACE___DataImport__c.object
<CustomObject>
    <fields>
        <fullName>Custom_add_date__c</fullName>
        <inlineHelpText>Address.%%%NAMESPACED_ORG%%%Custom_add_date__c</inlineHelpText>
        <label>Custom_add_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>custom_acc_text__c</fullName>
        <inlineHelpText>Account1.%%%NAMESPACED_ORG%%%custom_acc_text__c</inlineHelpText>
        <label>custom_acc_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_cont_num__c</fullName>
        <inlineHelpText>Contact2.%%%NAMESPACED_ORG%%%custom_cont_num__c</inlineHelpText>
        <label>custom_cont_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>new_lookup_campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_lookup__c</inlineHelpText>
        <label>new_lookup_campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPSP Data Imports (custom_campaign)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>custom_currency__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_currency__c</inlineHelpText>
        <label>custom_currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>custom_date__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_date__c</inlineHelpText>
        <label>custom_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>custom_email__c</fullName>
        <inlineHelpText>Payment.%%%NAMESPACED_ORG%%%custom_email__c</inlineHelpText>
        <label>custom_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>custom_multipick__c</fullName>
        <inlineHelpText>Payment.%%%NAMESPACED_ORG%%%custom_multipick__c</inlineHelpText>
        <label>custom_multipick</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>custom_number__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_number__c</inlineHelpText>
        <label>custom_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>custom_phone__c</fullName>
        <inlineHelpText>Payment.%%%NAMESPACED_ORG%%%custom_phone__c</inlineHelpText>
        <label>custom_phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>custom_picklist__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_picklist__c</inlineHelpText>
        <label>custom_picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>custom_text__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_text__c</inlineHelpText>
        <label>custom_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_textarea__c</fullName>
        <inlineHelpText>Opportunity.%%%NAMESPACED_ORG%%%custom_textarea__c</inlineHelpText>
        <label>custom_textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>custom_url__c</fullName>
        <inlineHelpText>Payment.%%%NAMESPACED_ORG%%%custom_url__c</inlineHelpText>
        <label>custom_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CO1_Date__c</fullName>
        <label>CO1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO1_Number__c</fullName>
        <label>CO1 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CO1_Phone__c</fullName>
        <label>CO1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CO1_Picklist__c</fullName>
        <label>CO1 Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO1_Text__c</fullName>
        <label>CO1 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO1_currency__c</fullName>
        <label>CO1 currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO1_RecordType__c</fullName>
        <label>CO1 RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO1_rt_picklist__c</fullName>
        <label>CO1 RT Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO1_text2__c</fullName>
        <label>CO1 text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO1_textarea__c</fullName>
        <label>CO1 textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CO1_url__c</fullName>
        <label>CO1 url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CO1_Currency2__c</fullName>
        <label>CO1 Currency2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO3_Date__c</fullName>
        <label>CO3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO3_Number__c</fullName>
        <label>CO3 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CO3_Phone__c</fullName>
        <label>CO3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CO3_Picklist__c</fullName>
        <label>CO3 Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO3_Text__c</fullName>
        <label>CO3 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO2_currency__c</fullName>
        <label>CO2 Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO2_currency_2__c</fullName>
        <label>CO2 Currency 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomObject2ImportStatus__c</fullName>
        <label>CustomObject2ImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomObject2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomObject2Imported</label>
        <referenceTo>CustomObject2__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomObject1ImportStatus__c</fullName>
        <label>CustomObject1ImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomObject1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomObject1Imported</label>
        <referenceTo>CustomObject1__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomObject3ImportStatus__c</fullName>
        <label>CustomObject3ImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomObject3Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomObject3Imported</label>
        <referenceTo>CustomObject3__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASC_Amount__c</fullName>
        <label>ASC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASC_Role__c</fullName>
        <description>The role associated with this soft credit. The role describes how the Account was involved with the Opportunity.</description>
        <inlineHelpText>The role associated with this soft credit. The role describes how the Account was involved with the Opportunity.</inlineHelpText>
        <label>ASC Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donation Source</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountSoftCreditsImportStatus__c</fullName>
        <label>AccountSoftCreditsImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSoftCreditsImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountSoftCreditsImported</label>
        <referenceTo>%%%NAMESPACE%%%Account_Soft_Credit__c</referenceTo>
        <relationshipLabel>Account Soft Credits</relationshipLabel>
        <relationshipName>Account_Soft_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Opp Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Test__c</fullName>
        <label>Opportunity Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Company__c</fullName>
        <label>Lead Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Imported_Status__c</fullName>
        <label>Lead Imported Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Name__c</fullName>
        <label>Lead Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Lookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picklist_to_checkbox__c</fullName>
        <description>Picklist that a checkbox field from the Contact Object will be mapped to.</description>
        <inlineHelpText>This is for testing checkbox-to-picklist field mappings.</inlineHelpText>
        <label>Picklist to Checkbox</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_Checkbox_to_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that will be mapped to another checkbox field on the Contact object.</description>
        <inlineHelpText>This is for testing checkbox-to-checkbox mappings.</inlineHelpText>
        <label>Checkbox To Checkbox</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>